--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  dio: any
   cupertino_icons: ^1.0.2
+  uuid: ^4.1.0
   flutter:
     sdk: flutter
   go_router: ^12.0.0
