--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -28,10 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  camera: ^0.10.5+5
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.4
   go_router: ^12.0.0
+  google_ml_kit: ^0.16.2
+  image: ^4.1.3
+  image_picker: ^1.0.4
+  path: ^1.8.3
+  path_provider: ^2.1.1
   riverpod: ^2.4.4
 
 dev_dependencies:
