--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.1
   riverpod: ^2.4.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
