--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_riverpod: ^2.4.4
   go_router: ^12.0.0
   google_ml_kit: ^0.16.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   image: ^4.1.3
   image_picker: ^1.0.4
   path: ^1.8.3
