--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  uuid: ^4.1.0
+  dio: any
   camera: ^0.10.5+5
   cupertino_icons: ^1.0.2
   flutter:
