--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -43,11 +43,19 @@ dependencies:
   image_picker: ^1.0.4
   path: ^1.8.3
   path_provider: ^2.1.1
+  retrofit: ^4.0.3
+  json_annotation: ^4.8.1
+  riverpod_annotation: ^2.2.1
   riverpod: ^2.4.4
+  freezed_annotation: ^2.4.1
   shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  retrofit_generator: ^8.0.2
+  build_runner: ^2.4.6
+  json_serializable: ^6.6.2
+  freezed: ^2.4.5
   flutter_test:
     sdk: flutter
 
