--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   path_provider: ^2.1.1
   riverpod: ^2.4.4
   shared_preferences: ^2.2.2
-
+  flutter_ffmpeg: ^0.4.2
+  video_player: ^2.8.1
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
