--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_ffmpeg: ^0.4.2
   video_player: ^2.8.1
 dev_dependencies:
+  flutter_hooks: ^0.20.3
   flutter_lints: ^2.0.0
   retrofit_generator: ^8.0.2
   build_runner: ^2.4.6
