--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
 
 dev_dependencies:
+  flutter_hooks: ^0.20.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
