--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -82,17 +82,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto/Roboto-Regular.ttf
+          weight: 200
+    - family: Incheon
+      fonts:
+        - asset: fonts/incheon.ttf
+          weight: 200
+    - family: Roboto_Bold
+      fonts:
+        - asset: fonts/Roboto/Roboto-Bold.ttf
+          weight: 400
+    - family: Roboto_Light
+      fonts:
+        - asset: fonts/Roboto/Roboto-Light.ttf
+          weight: 400
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
