--- a/catchmypain/pubspec.yaml
+++ b/catchmypain/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_ffmpeg: ^0.4.2
   video_player: ^2.8.1
+  screenshot: ^2.1.0
 dev_dependencies:
   flutter_hooks: ^0.20.3
   flutter_lints: ^2.0.0
